--- a/online/conf/my.conf
+++ b/online/conf/my.conf
@@ -4,3 +4,4 @@ threadNum  5
 queSize 10
 en_dict /home/lvda/c++/project/userInputAssistant/online/data/en_dict.dat
 cn_dict /home/lvda/c++/project/userInputAssistant/online/data/cn_dict.dat
+cache /home/lvda/c++/project/userInputAssistant/online/data/cache.dat
